@@ -3,7 +3,8 @@ Changelog started January 1, 2004; Currently at $Revision$.
 
 January 2013
 --------------------------------------------------------------------------------
- ! Missing arguments in SSI functions called through ?ssi= generated error messages showing full server file path 
+ ! Change language from the admin panel could allow XSS, path disclosure and code injection (thanks Jakub Galczyk for reporting the issue)
+ ! Missing arguments in SSI functions called through ?ssi= generated error messages showing full server file path (thanks yan.uniko.102 for reporting it)
  ! Directory listing and editing of arbitrary files from the theme editing page in the admin panel
 
 
